# chess

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.py  chess.runsettings  chess.sln  chess.vcxproj  chess.vcxproj.filters  format.py  vcpkg.json
chess/: chess.sln  chess.sln.DotSettings  chess.vcxproj  chess.vcxproj.filters
chess/src/: main.cpp
chess/src/chess/: Chessboard.cpp  Chessboard.h  ChessboardDisplayer.cpp  ChessboardDisplayer.h  Console.cpp  Console.h  Controller.cpp  Controller.h  Coordinate.cpp  Coordinate.h  Counts.h  ErrorConverter.cpp  Game.cpp  Game.h  Game.ixx  HandlerInputer.cpp  HandlerInputer.h  InputDisplayer.cpp  InputDisplayer.h  InputHandler.cpp  InputHandler.h  InputerDisplayer.cpp  InputerDisplayer.h  LabelShower.h  LableDisplayer.cpp  LableDisplayer.h  Player.cpp  Player.h  PositionChecker.cpp  PositionChecker.h  eConsoleColor.h  eError.h
chess/src/chess/logic/: CheckChecker.cpp  CheckChecker.h  Coordinate.cpp  (+24 more)
chessTests/: chessTests.vcxproj  chessTests.vcxproj.filters
chessTests/test/: mainTests.cpp
resources/: chessboard.json
source/: CMakeLists.txt  chess.vcxproj.filters
source/console/: CMakeLists.txt  ChessboardDisplayer.cpp  ChessboardDisplayer.h  ChessboardDisplayer.ixx  ChessboardPresenter.ixx  ConsolePromoter.ixx  Controller.cpp  Controller.h  Controller.ixx  Game.ixx  HandlerInputer.cpp  HandlerInputer.h  HandlerInputer.ixx  InputHandler.ixx  LabelDisplayer.ixx  LabelPresenter.ixx  LabelShower.cpp  LabelShower.h  LabelShower.ixx  eConsoleColor.ixx  main.cpp
source/core/: CMakeLists.txt  Chessboard.ixx  Player.ixx
source/core/logic/: ChessboardBuilder.ixx  Coordinate.h  Coordinate.ixx  Counts.ixx  DrawChecker.cpp  DrawChecker.ixx  ErrorConverter.cpp  ErrorConverter.ixx  Inputer.h  Inputer.ixx  Inputter.ixx  MoveValidator.cpp  MoveValidator.ixx  PieceDirector.cpp  PieceDirector.h  PieceDirector.ixx  PieceInitializer.cpp  PieceInitializer.ixx  PieceSignalDirector.ixx  PieceTakeLocator.cpp  PieceTakeLocator.h  PieceTakeLocator.ixx  PromotePieceInputer.cpp  PromotePieceInputer.h  PromotePieceInputer.ixx  Promoter.ixx  Promotion.cpp  Promotion.ixx  Sizes.ixx  eError.ixx  eInputType.ixx
source/core/pieces/: Bishop.cpp  Bishop.ixx  BishopChecker.cpp  BishopChecker.ixx  King.cpp  King.ixx  KingChecker.cpp  KingChecker.ixx  Knight.cpp  Knight.ixx  KnightChecker.cpp  KnightChecker.h  KnightChecker.ixx  Pawn.cpp  Pawn.h  Pawn.ixx  PawnChecker.cpp  PawnChecker.h  PawnChecker.ixx  Piece.h  Piece.ixx  Queen.cpp  Queen.ixx  QueenChecker.cpp  QueenChecker.ixx  Rook.cpp  Rook.ixx  RookChecker.cpp  RookChecker.ixx
source/core/pieces/logic/: BishopQueenRookDirectionChecker.cpp  BishopQueenRookDirectionChecker.ixx  CheckChecker.cpp  CheckChecker.h  CheckChecker.ixx  DrawChecker.ixx  IMoveChecker.h  IMoveChecker.ixx  MoveChecker.cpp  MoveChecker.h  MoveChecker.ixx  MoveCheckerFactory.cpp  MoveCheckerFactory.ixx  MoveCheckerOwner.ixx  PieceColorAndType.ixx  PieceFactory.ixx  PieceFinder.cpp  PieceFinder.h  PieceFinder.ixx  PieceTypeConverter.h  PieceTypeConverter.ixx  PositionChecker.cpp  PositionChecker.ixx  eCastleSide.h  eCastleSide.ixx
source/engine/: CMakeLists.txt  Context.ixx  Engine.ixx  Instance.ixx  LogicalDevices.ixx  PhysicalDevices.ixx
source/engine/core/: Context.ixx  Instance.ixx  LogicalDevice.ixx  PhysicalDeviceInfo.ixx  PhysicalDeviceSelector.ixx  PhysicalDevices.ixx  QueueFamilyInfo.ixx  Surface.ixx  Swapchain.ixx  VulkanChecker.ixx
source/server/: CMakeLists.txt  Chessboard.ixx  Player.ixx
source/server/logic/: ChessboardBuilder.ixx  Counts.ixx  Inputter.ixx  MoveValidator.ixx  PieceDirector.ixx  PieceTakeLocator.ixx  Promoter.ixx  Promotion.ixx  eInputType.ixx
source/server/pieces/: Bishop.ixx  BishopChecker.ixx  King.ixx  KingChecker.ixx  Knight.ixx  KnightChecker.ixx  Pawn.ixx  PawnChecker.ixx  Piece.ixx  Queen.ixx  QueenChecker.ixx  Rook.ixx  RookChecker.ixx
source/server/pieces/logic/: BishopQueenRookDirectionChecker.ixx  CheckChecker.ixx  CoordinateToPieceBuilder.ixx  CoordinateToPieceFactory.ixx  DirectionMoveChecker.ixx  DrawChecker.ixx  ICastlable.ixx  IMoveChecker.ixx  MoveCheckerFactory.ixx  MoveCheckerOwner.ixx  PieceColorAndType.ixx  PieceColorConverter.ixx  PieceFactory.ixx  PieceFinder.ixx  PiecePlacement.ixx  PieceTypeConverter.ixx  PiecesOnBoardCreator.ixx  PositionChecker.ixx  eCastleSide.ixx  ePieceColor.ixx  ePieceType.ixx
source/src/chess/: Chessboard.cpp  ChessboardDisplayer.h  Controller.cpp  Game.ixx
source/src/chess/logic/: DrawChecker.h  ErrorConverter.h  MoveValidator.h  PieceDirector.h  PromotePieceInputer.cpp
source/src/chess/pieces/: Bishop.h  BishopChecker.cpp  Knight.h  Pawn.cpp  Piece.cpp  Rook.cpp  Rook.h  RookChecker.h
source/src/chess/pieces/logic/: BishopQueenRookDirectionChecker.h  MoveChecker.cpp  MoveCheckerFactory.h  PieceColorConverter.h  PositionChecker.cpp  PositionChecker.h
source/utils/: CMakeLists.txt  ConsoleReader.ixx  Converter.ixx  Exceptions.ixx
source/window/: CMakeLists.txt  main.cpp
source/window/logic/: AppInfo.ixx
src/: main.cpp
src/chess/: Chessboard.cpp  Chessboard.h  Console.cpp  Controller.cpp  Coordinate.cpp  Coordinate.h  Counts.h  ErrorConverter.h  Game.cpp  Game.h  Sizes.h
src/chess/pieces/: Bishop.cpp  Bishop.h  IMoveChecker.h  King.cpp  KingChecker.cpp  KingChecker.h  Knight.cpp  Knight.h  KnightChecker.cpp  KnightChecker.h  Pawn.cpp  Pawn.h  PieceColorAndType.h  Queen.cpp  Rook.cpp  Rook.h
tests/: CMakeLists.txt
tests/server/: CMakeLists.txt
tests/server/logic/: CoordinateTests.cpp  PieceTakeLocatorTests.cpp
tests/server/pieces/: BishopCheckerTests.cpp  BishopTests.cpp  KingCheckerTests.cpp  KingTests.cpp  KnightCheckerTests.cpp  KnightTests.cpp  PawnCheckerTests.cpp  PawnTests.cpp  PositionCheckerTests.cpp  QueenCheckerTests.cpp  QueenTests.cpp  RookCheckerTests.cpp  RookTests.cpp
tests/server/pieces/logic/: CheckCheckerTests.cpp  CoordinateToPieceFactoryTests.cpp  DirectionMoveCheckerTests.cpp  PieceColorConverterTests.cpp  PieceFinderTests.cpp  PieceTypeConverterTests.cpp  PositionCheckerTests.cpp
(+70 files in other folders)
